modify ingredients formulary

--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -29,7 +29,7 @@
                         <label><p class="text-info" th:text="#{recipeDetail.time}">Tiempo:</p></label>
                         <label><p class="text-info" th:text="|${recipe.time}|"></p></label>
                         <br>
-                        <label><p class="text-info" th:text="#{recipeDetail.idiom}">Idioma:</p></label>
+                        <label><p class="text-info" th:text="#{recipeDetail.language}">Idioma:</p></label>
                         <label><p class="text-info" th:text="|${recipe.language}|"></p></label>
                         <br>
                         <p class="text-info" th:text="#{recipeDetail.alergen}">Alergenos:</p>
