--- a/src/main/resources/templates/recipeList.html
+++ b/src/main/resources/templates/recipeList.html
@@ -38,7 +38,7 @@
                                 </a>
                                 <li><strong th:text="#{recipelist.time}">Tiempo de Preparación: </strong><span th:text="|${recipe.time + ' min'}|"></span></li>
                                 <li><strong th:text="#{recipelist.description}">Descripción: </strong><span th:text="|${recipe.description}|"></span></li>
-                                <li><strong th:text="#{recipelist.idiom}">Idioma: </strong><span th:text="|${recipe.language}|"></span></li>
+                                <li><strong th:text="#{recipelist.language}">Idioma: </strong><span th:text="|${recipe.language}|"></span></li>
                             </ul>
                         </li>
                     </div>
