--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,8 +24,11 @@
                 <div class="justify-content-center text-center">
                 <i class="fa-solid fa-heart heart-icon pb-3 text-resalte text-center justify-content-center"></i></div>
                 <div class="mx-3 px-3">
-                <h3 class="pt-2 text-center" th:text="#{home.message.welcome}">Si eres amante de la cocina este es el mejor lugar
-                    para encontrar recetas saludables y deliciosas creadas por nuestros nutricionistas</h3></div>
+                    <h3 class="pt-2 text-center d-none d-sm-block" th:text="#{home.message.welcome}">Si eres amante de la cocina este es el mejor lugar
+                        para encontrar recetas saludables y deliciosas creadas por nuestros nutricionistas</h3>
+                    <p class="pt-2 text-center d-block d-sm-none" th:text="#{home.message.welcome}">Si eres amante de la cocina este es el mejor lugar
+                        para encontrar recetas saludables y deliciosas creadas por nuestros nutricionistas</p>
+                </div>
             </section>
 
             <section class="container-lg border-bottom border-fuente text-center py-4">
