--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -14,9 +14,8 @@
 <div class="container">
     <header th:insert="fragments.html :: header">Header</header>
     <main class="content">
-        <div class="container-fluid bg-fondo">
-            <section
-                    class="container-fluid justify-content-center d-inline-block d-md-inline-block  recipe-info border-resalte bg-fondo ">
+        <div class="container-fluid bg-fondo px-0">
+            <section class="container-fluid justify-content-center d-inline-block d-md-inline-block  recipe-info border-resalte bg-fondo px-0">
                 <div class="row border-fuente border-bottom border-left border-right mx-5">
                     <div class="recipe-image col-12 col-md-6 d-md-block d-inline-block p-0">
                         <img th:src="@{/images/recipe/}+recipe_+${recipe.id}+.jpeg" alt="Recipe Image">
@@ -51,7 +50,7 @@
 
                 </div>
             </section>
-            <section class="container-fluid">
+            <section class="container-fluid px-0">
                 <div class="recipe-section py-3 mx-5">
                     <h2 th:text="#{recipeDetail.ingredients}">Ingredientes</h2>
                     <ul>
