Modify size on profile text

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,7 +17,7 @@
         <div class="container-fluid bg-fondo">
             <section class="py-5 border-bottom border-fuente">
                 <div class="d-flex justify-content-center flex-column align-items-center flex-sm-row" style="gap: 1.5rem">
-                        <h1 class="text-info" th:text="#{home.section.welcome}"> Bienvenido a </h1>
+                        <h1 class="text-info text-center" th:text="#{home.section.welcome}"> Bienvenido a </h1>
                         <img th:src="@{/images/logo/logo_nombre.png}" alt="NutriFusion Food"
                                           class="nutrifusion-food-welcome">
                 </div>
