--- a/src/main/resources/templates/ampliacion/nutritionistList.html
+++ b/src/main/resources/templates/ampliacion/nutritionistList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/custom.css}"> <!--link para verlo con chrome enlace css-->
-    <link rel="stylesheet" href="../static/css/custom.css"> <!-- link verlo previsualizador enlace css-->
+    <link rel="stylesheet" href="../../static/css/custom.css"> <!-- link verlo previsualizador enlace css-->
     <script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
     <title>Nutritionists</title>
 </head>
