--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -70,6 +70,18 @@
                     <p class="text-info" th:text="${recipe.steps}"></p>
                 </div>
             </section>
+            <form th:if="${recipe.user.id==1}" th:action="'/recipes/'+${recipe.id}" th:method="delete">
+                <div class="row justify-content-center m-2">
+                    <div class="col-6 bg-info p-1 ">
+                        <div class="bg-info pt-2 border border-fondo" style="border-width: 5px; text-align: center;">
+                            <button type="submit" class="btn btn-info text-fondo">
+                                <h4 th:text="#{recipeDetail.delete}" class="text-fondo d-none d-sm-block">BORRAR</h4>
+                                <h6 th:text="#{recipeDetail.delete}" class="text-fondo d-block d-sm-none">BORRAR</h6>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
     </main>
     <footer th:insert="fragments.html::footer"></footer>
